synapse/synapse.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - image: matrixdotorg/synapse:v1.83.0
        name: synapse
        volumeMounts:
        - name: secret-volume
          mountPath: /data/
        - name: data
          mountPath: /data/media_store
        ports:
          - containerPort: 8008
      volumes:
        - name: secret-volume
          secret:
            secretName: homeserver
        - name: data
          persistentVolumeClaim:
            claimName: synapse-pv-claim
