synapse/delegation.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delegation
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, HEAD, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  tls:
  - hosts:
    - www.cheatcodesam.com
    - cheatcodesam.com
    secretName: quickstart-example-tls
  rules:
  - host: www.cheatcodesam.com
    http:
      paths:
      - path: /.well-known/matrix/
        pathType: Prefix
        backend:
          service:
            name: delegation-service
            port:
                number: 80
